syntax = "proto3";

option go_package = "internal/generated/grpc/service";

import "validate/validate.proto";

service AuthSrv {
  rpc register(RegisterIn) returns (RegisterOut);
  rpc login(LoginIn) returns (LoginOut);
  rpc refresh(RefreshIn) returns (RefreshOut);
}

message RegisterIn {
  string email = 100 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.email = true
  ];
  string password = 200[
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 8,
    (buf.validate.field).string.max_len = 30,
    (buf.validate.field).string.pattern = "^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).*$"
  ];
}

message RegisterOut {
    string id = 100;
}

message LoginIn {
    string email = 100 [    
        (buf.validate.field).required = true,
        (buf.validate.field).string.email = true];
    string password = 200[
        (buf.validate.field).required = true,
        (buf.validate.field).string.min_len = 8
    ]; 
}

message LoginOut {
    string access_token = 100;
    string refresh_token = 200;
}

message RefreshIn {
    string refresh_token = 100[
        (buf.validate.field).required = true,
        (buf.validate.field).string.min_len = 8,
        (buf.validate.field).string.max_len = 512
    ];
}

message RefreshOut {
    string access_token = 100;
    string refresh_token = 200;
}
